tests/fixtures/LatestTests/ObjectTests/errors/variable_already_declared.fg
/; EXPECT_ERROR: VariableAlreadyDeclared
type Person = {
    name: str
    age: int
}

var p: Person = {
    name: "John",
    age: 30
}

var p: Person = {
    name: "Jane",
    age: 25
}

